--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/partials/buttons.css" />
     <link rel="stylesheet" href="/styles/partials/forms.css" />
     <link rel="stylesheet" href="/styles/partials/animations.css" />
-    <link rel="stylesheet" href="/styles/pages/job.css" />
+    <link rel="stylesheet" href="/styles/pages/profile.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -23,70 +23,98 @@
     />
     
   </head>
-  <body id="page-job">
+  <body id="page-profile">
 
-    <%- include('parts/page-header', {title: 'Adicionar Novo Job'}) %> 
+    <%- include('parts/page-header', {title: 'Meu Perfil'}) %> 
+    
 
-
-    <div class="container flex animate-up delay-2">
+    <div class="container animate-up delay-2">
+      <aside class="card">
+        <img src="<%= profile.avatar %> " alt="<%= profile.name %> ">
+        <h2><%= profile.name %> </h2>
+        <p>
+          O valor da sua hora é <br/>
+          <strong>R$ 75,00</strong>
+        </p>
+        <button class="button green" form="form-profile" type="submit">Salvar dados</button>
+      </aside>
       <main>
-        <form id="form-job">
+
+        <form id="form-profile">
           <fieldset>
-            <legend>Dados do Job</legend>
+            <legend>Dados do perfil</legend>
             <div class="separator light"></div>
 
-            <div class="input-wrapper">
-              <label for="name">Nome do Job</label>
-              <input type="text" id="name" name="name" />
+            <div class="input-group">
+              <div class="input-wrapper">
+                <label for="name">Nome</label>
+                <input type="text" id="name" name="name" value="<%= profile.name %> " />
+              </div>
+
+              <div class="input-wrapper">
+                <label for="avatar">Link da foto</label>
+                <input 
+                placeholder="https://"
+                type="url" 
+                id="avatar" 
+                name="avatar"
+                value="<%= profile.avatar %> " />
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset>
+            <legend>Planejamento</legend>
+            <div class="separator light"> </div>
+
+            <div class="input-group">
+              <div class="input-wrapper">
+                <label for="monthly-budget">Quanto eu <br/>quero ganhar por mês?</label>
+                <input 
+                  type="amount"
+                  step="0.1" 
+                  id="monthly-budget" 
+                  name="monthly-budget" 
+                  placeholder="R$"
+                  value="<%= profile["monthly-budget %> "/>
+              </div>
+
+              <div class="input-wrapper">
+                <label for="hours-per-day">Quantas horas <br/>
+                  quero trabalhar por dia?</label>
+                <input 
+                  type="number"
+                  id="hours-per-day" 
+                  name="hours-per-day"
+                  value="<%= profile["hours-per-day"] %> " />
+              </div>
             </div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="daily-hours">Quantas horas <br/>
-                  por dia vai dedicar ao job?</label>
-                <input 
+                <label for="days-per-week">Quantos dias <br/>quero
+                  trabalhar por semana?</label>
+                <input
                   type="number"
-                  step="0.1" 
-                  id="daily-hours" 
-                  name="daily-hours"/>
+                  id="days-per-week" 
+                  name="days-per-week"
+                  value="<%= profile["days-per-week"] %> " />
               </div>
 
               <div class="input-wrapper">
-                <label for="total-hours">Estimativa de <br/>
-                  horas para esse Job?</label>
+                <label for="vacation-per-year">Quantas semanas <br/>
+                  por ano você quer tirar férias?</label>
                 <input 
-                  type="number"
-                  id="total-hours" 
-                  name="total-hours" />
+                  type="number" 
+                  id="vacation-per-year" 
+                  name="vacation-per-year"
+                  value="<%= profile["vacation-per-year"] %> " />
               </div>
             </div>
           </fieldset>
     
         </form>
       </main>
-      <aside class="card">
-        <img src="/images/money-gray.svg" alt="Imagem de Dinheiro">
-        <p>
-          Preencha os dados ao lado para
-          ver o valor do projeto
-        </p>
-        <div class="button-group">
-          <button 
-            class="button green" 
-            form="form-job" 
-            type="submit" 
-            title="Salvar Dados">Salvar</button>
-          <a 
-            href="/" 
-            class="button gray">
-            <img 
-              src="/images/trash-24.svg" 
-              alt="Cancelar cadastro" 
-              title="Cancelar cadastro">
-          </a>
-        </div>
-      </aside>
-      
     </div>
     <!-- end container -->
   </body>
