--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/partials/buttons.css" />
     <link rel="stylesheet" href="/styles/partials/forms.css" />
     <link rel="stylesheet" href="/styles/partials/animations.css" />
-    <link rel="stylesheet" href="/styles/pages/profile.css" />
+    <link rel="stylesheet" href="/styles/pages/job.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -22,99 +22,69 @@
       rel="stylesheet"
     />
     
-  </head>
-  <body id="page-profile">
+    <%- include('parts/page-header', { title: 'Adicionar Novo Job'}) %>
 
-    <%- include('parts/page-header', {title: 'Meu Perfil'}) %> 
     
 
-    <div class="container animate-up delay-2">
-      <aside class="card">
-        <img src="<%= profile.avatar %> " alt="<%= profile.name %> ">
-        <h2><%= profile.name %> </h2>
-        <p>
-          O valor da sua hora é <br/>
-          <strong>R$ 75,00</strong>
-        </p>
-        <button class="button green" form="form-profile" type="submit">Salvar dados</button>
-      </aside>
+    <div class="container flex animate-up delay-2">
       <main>
-
-        <form id="form-profile">
+        <form id="form-job">
           <fieldset>
-            <legend>Dados do perfil</legend>
+            <legend>Dados do Job</legend>
             <div class="separator light"></div>
 
-            <div class="input-group">
-              <div class="input-wrapper">
-                <label for="name">Nome</label>
-                <input type="text" id="name" name="name" value="<%= profile.name %> " />
-              </div>
-
-              <div class="input-wrapper">
-                <label for="avatar">Link da foto</label>
-                <input 
-                placeholder="https://"
-                type="url" 
-                id="avatar" 
-                name="avatar"
-                value="<%= profile.avatar %> " />
-              </div>
+            <div class="input-wrapper">
+              <label for="name">Nome do Job</label>
+              <input type="text" id="name" name="name" />
             </div>
-          </fieldset>
-
-          <fieldset>
-            <legend>Planejamento</legend>
-            <div class="separator light"> </div>
 
             <div class="input-group">
               <div class="input-wrapper">
-                <label for="monthly-budget">Quanto eu <br/>quero ganhar por mês?</label>
+                <label for="daily-hours">Quantas horas <br/>
+                  por dia vai dedicar ao job?</label>
                 <input 
-                  type="amount"
+                  type="number"
                   step="0.1" 
-                  id="monthly-budget" 
-                  name="monthly-budget" 
-                  placeholder="R$"
-                  value="<%= profile["monthly-budget %> "/>
+                  id="daily-hours" 
+                  name="daily-hours"/>
               </div>
 
               <div class="input-wrapper">
-                <label for="hours-per-day">Quantas horas <br/>
-                  quero trabalhar por dia?</label>
+                <label for="total-hours">Estimativa de <br/>
+                  horas para esse Job?</label>
                 <input 
                   type="number"
-                  id="hours-per-day" 
-                  name="hours-per-day"
-                  value="<%= profile["hours-per-day"] %> " />
-              </div>
-            </div>
-
-            <div class="input-group">
-              <div class="input-wrapper">
-                <label for="days-per-week">Quantos dias <br/>quero
-                  trabalhar por semana?</label>
-                <input
-                  type="number"
-                  id="days-per-week" 
-                  name="days-per-week"
-                  value="<%= profile["days-per-week"] %> " />
-              </div>
-
-              <div class="input-wrapper">
-                <label for="vacation-per-year">Quantas semanas <br/>
-                  por ano você quer tirar férias?</label>
-                <input 
-                  type="number" 
-                  id="vacation-per-year" 
-                  name="vacation-per-year"
-                  value="<%= profile["vacation-per-year"] %> " />
+                  id="total-hours" 
+                  name="total-hours" />
               </div>
             </div>
           </fieldset>
     
         </form>
       </main>
+      <aside class="card">
+        <img src="/images/money-gray.svg" alt="Imagem de Dinheiro">
+        <p>
+          Preencha os dados ao lado para
+          ver o valor do projeto
+        </p>
+        <div class="button-group">
+          <button 
+            class="button green" 
+            form="form-job" 
+            type="submit" 
+            title="Salvar Dados">Salvar</button>
+          <a 
+            href="index.html" 
+            class="button gray">
+            <img 
+              src="/images/trash-24.svg" 
+              alt="Cancelar cadastro" 
+              title="Cancelar cadastro">
+          </a>
+        </div>
+      </aside>
+      
     </div>
     <!-- end container -->
   </body>
