--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -25,12 +25,11 @@
   </head>
   <body id="page-profile">
 
-    <%- include('parts/page-header', {title: 'Meu Perfil'}) %> 
-    
+    <%- include('parts/page-header', { title: 'Meu Perfil'}) %>
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="<%= profile.avatar %> " alt="<%= profile.name %> ">
+        <img src="<%= profile.avatar %> " alt="<%= profile.name %>">
         <h2><%= profile.name %> </h2>
         <p>
           O valor da sua hora é <br/>
@@ -48,7 +47,7 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" value="<%= profile.name %> " />
+                <input type="text" id="name" name="name" value="<%= profile.name %>" />
               </div>
 
               <div class="input-wrapper">
@@ -58,7 +57,7 @@
                 type="url" 
                 id="avatar" 
                 name="avatar"
-                value="<%= profile.avatar %> " />
+                value="<%= profile.avatar %>" />
               </div>
             </div>
           </fieldset>
@@ -76,7 +75,7 @@
                   id="monthly-budget" 
                   name="monthly-budget" 
                   placeholder="R$"
-                  value="<%= profile["monthly-budget %> "/>
+                  value="<%= profile["monthly-budget"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -86,7 +85,7 @@
                   type="number"
                   id="hours-per-day" 
                   name="hours-per-day"
-                  value="<%= profile["hours-per-day"] %> " />
+                  value="<%= profile["hours-per-day"] %>" />
               </div>
             </div>
 
@@ -98,7 +97,7 @@
                   type="number"
                   id="days-per-week" 
                   name="days-per-week"
-                  value="<%= profile["days-per-week"] %> " />
+                  value="<%= profile["days-per-week"] %>" />
               </div>
 
               <div class="input-wrapper">
@@ -108,7 +107,7 @@
                   type="number" 
                   id="vacation-per-year" 
                   name="vacation-per-year"
-                  value="<%= profile["vacation-per-year"] %> " />
+                  value="<%= profile["vacation-per-year"] %>" />
               </div>
             </div>
           </fieldset>
